k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insurance-2306275310-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: insurance-2306275310-be
  template:
    metadata:
      labels:
        app: insurance-2306275310-be
    spec:
      containers:
        - name: springboot-container
          # PASTIKAN INI DIGANTI DENGAN IMAGE DOCKER HUB KAMU
          image: khaylanaura/insurance-be:REPLACE_ME_TAG 
          ports:
            - containerPort: 8080
