k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: insurance-2306275310-service
  namespace: default
spec:
  selector:
    app: insurance-2306275310-be # Harus sama dengan label di Deployment
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080 # Port tempat Spring Boot berjalan di dalam container
