k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: insurance-2306275310-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: 2306275310-be.apap.hafizmuh.site 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: insurance-2306275310-service
                port:
                  number: 80
